# SelfMemory

./: .env  .env.example  .env.migration  .gitignore  .pre-commit-config.yaml  API_KEY_REFACTORING.md  CHANGELOG.md  CLAUDE.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  MANAGED_SERVICE_FIXES.md  MULTIUSER_SETUP.md  Makefile  PYPI_RELEASE_CHECKLIST.md  README-split-architecture.md  README.md  SECURITY.md  VERSION.md  add_memory_to_collection.py  api_server.py  codecov.yml  constants.py  core-api-server.py  db.py  enhanced_mcp_server.py  generate_embeddings.py  jst.md  main.ipynb  main.py  mcp_server.py  mem-mcp-Memory.md  mongodb_user_manager.py  plan.md  proxy_server.py  pyproject.toml  qdrant_db.py  requirement.txt  requirements.txt  requirements_api.txt  requirements_mcp.txt  (+13 more)
.clinerules/: project_rules.md
.git-hooks/: commit-msg-validator.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  failed_question.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docsdeploy.yml  release.yml  stale.yml  validate-commit-messages.yml
docs/: MULTIUSER_SETUP.md  README-split-architecture.md  docusaurus.config.ts  file-reorganization-plan.md  mem-mcp-Memory.md  package-lock.json  package.json  plan.md  sidebars.ts
docs/blog/: authors.yml
docs/docs/: CONFIGURATION.md  Home.md  api-reference.md  getting-started.md  sdks.md
examples/: README.md  config_validation_demo.py  debug_persistence.py  debug_test.py  detailed_debug.py  filter_debug.py  fixed_test.py  inmemory_client_example.py  inmemory_client_quickstart.py  inmemory_quickstart.py  local_memory_examples.py  managed_vs_selfhosted.py  multi_user_isolation_demo.py  new-architecture-demo.py  quick_test.py  quickstart_fixed.py  sdk_basic_usage.py  sdk_comprehensive_test.py  sdk_test_report.json  simple_usage_example.py  test_persistence_proper.py
inmemory/: __init__.py  cli.py  client.py  memory.py
inmemory-mcp/: .env.example  README.md  main.py  requirements.txt
inmemory-mcp/src/: server.py
inmemory/api/: README.md  api-Memory.md  server.py
inmemory/common/: __init__.py  constants.py  duplicate_detector.py  temporal_utils.py
inmemory/config/: __init__.py  config.py
inmemory/configs/: __init__.py  base.py
inmemory/embeddings/: __init__.py  base.py  configs.py  embeddings-Memory.md  ollama.py  ollama_usage.py
inmemory/memory/: __init__.py  base.py  main.py
inmemory/repositories/: __init__.py  qdrant_db.py  repositories-Memory.md
inmemory/search/: enhanced_search_engine.py
inmemory/security/: __init__.py  encryption.py
inmemory/services/: add_memory.py  retrieve_memory.py
inmemory/stores/: __init__.py  base.py  file_store.py  mongodb_store.py  stores-Memory.md
inmemory/utils/: __init__.py  embeddings.py  factory.py
inmemory/vector_stores/: __init__.py  qdrant.py  qdrant_usage.py
scripts/: migrate_encrypt_data.py  send_test_email.py  test_smtp.py
selfmemory/: __init__.py  cli.py  client.py  exceptions.py
selfmemory-mcp/: .env.example  OAUTH_CLIENT_REQUIREMENTS.md  README.md  README_UNIFIED_AUTH.md  TROUBLESHOOTING.md  auth.py  config.py  docker-compose.yaml  main.py  main_oauth.py  main_unified.py  mcptools.py  pyproject.toml  requirements.txt  telemetry.py  telemetry_decorators.py  utils.py
selfmemory-mcp/api/: .env.example  main.py
selfmemory-mcp/auth/: __init__.py  client_cache.py  scope_validator.py  token_cache.py  token_extractor.py  tool_auth.py  unified_auth.py  validation_helpers.py
selfmemory-ts/: README.md  package-lock.json  package.json  tsconfig.json
server/: .env.example  README.md  config.py  database.py  dependencies.py  health.py  main.py  mcp_auth.py  memory_request_utils.py  requirements.txt  telemetry.py  test_multiuser.py
tests/: README.md  __init__.py  conftest.py  test_add_memory_contract.py  test_aim.md  test_client.py  test_config_integration.py  test_encryption.py  test_enhanced_configs.py  test_memory_advanced.py  test_memory_main.py  test_memory_request_utils.py  test_multiuser.py  test_nemo_adapter.py  test_qdrant.py  test_sdk_memory.py  test_security_docs.py
(+128 files in other folders)
